--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Teste_br_mall</string>
+    <string name="char_name">Char name</string>
+    <string name="char_type">Char Type</string>
 </resources>
